# game-sdl

./: .gitignore  CMakeLists.txt  Makefile  README.md  blood_effect.cpp  blood_effect.h  button.cpp  button.h  camera.cpp  camera.h  character.cpp  character.h  collision.cpp  collision.h  cursor.cpp  cursor.h  dot.cpp  dot.h  enemy.cpp  enemy.h  main.cpp  map.cpp  map.h  path.cpp  path.h  player.cpp  player.h  shotgun.cpp  shotgun.h  texture.cpp  texture.h  tile.cpp  tile.h  timer.cpp  timer.h  vector2.cpp  vector2.h
